[package]
name = "job-hunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.48"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
