[package]
name = "jobhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.60"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
scraper = "0.19.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde", "clock"] }
colored = "2.0.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rustyline = "14.0.0"

[dev-dependencies]
regex = "1.10.4"
